Bug 432653 - 'Locations' runner does not work after upgrade to 5.20.90
Summary: 'Locations' runner does not work after upgrade to 5.20.90
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: locations (other bugs)
Version First Reported In: 5.20.90
Platform: Arch Linux Other
: VHI normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-02-08 16:35 UTC by Kishore Gopalakrishnan
Modified: 2021-02-08 18:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2021-02-08 16:35:19 UTC
SUMMARY
The 'locations' runner of krunner has stopped working after upgrading to 5.20.90 (5.21 beta). Typing the path to a folder no longer offers to open that folder.

STEPS TO REPRODUCE
1. Invoke krunner
2. Type '~' (without quotes)

OBSERVED BEHAVIOUR
Krunner does not offer to open home directory with Dolphin

EXPECTED BEHAVIOUR
Like in 5.20.5, when a path to a folder is typed, krunner should offer to open it in Dolphin.

SYSTEM INFORMATION
Operating System: Arch Linux
KDE Plasma Version: 5.20.90
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Locations runner is enabled in the krunner settings. I tried disabling and enabling that runner, but the bug still persists. Downgrading to Plasma 5.20.5 fixes the issue.
Comment 1 Bug Janitor Service 2021-02-08 16:46:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/639
Comment 2 Alexander Lohnau 2021-02-08 18:37:49 UTC
Git commit 67560c26807eb6b52a733ba7ecc3d3119ba872cc by Alexander Lohnau.
Committed on 08/02/2021 at 16:46.
Pushed by ngraham into branch 'master'.

Fix condition for executable folders

If folders are marked as executable the runner will skip them
but we only want to skip files, because they are handled by
the shellrunner.
FIXED-IN: 5.21

M  +2    -1    runners/locations/locationrunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/67560c26807eb6b52a733ba7ecc3d3119ba872cc
Comment 3 Nate Graham 2021-02-08 18:40:53 UTC
Git commit 6218088312d3e8d18c766ca9735c8f6f43fad6ed by Nate Graham, on behalf of Alexander Lohnau.
Committed on 08/02/2021 at 18:40.
Pushed by ngraham into branch 'Plasma/5.21'.

Fix condition for executable folders

If folders are marked as executable the runner will skip them
but we only want to skip files, because they are handled by
the shellrunner.
FIXED-IN: 5.21


(cherry picked from commit 67560c26807eb6b52a733ba7ecc3d3119ba872cc)

M  +2    -1    runners/locations/locationrunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/6218088312d3e8d18c766ca9735c8f6f43fad6ed