Fix condition for executable folders

If folders are marked as executable the runner will skip them
but we only want to skip files, because they are handled by
the shellrunner.

BUG: 432653
FIXED-IN: 5.21


(cherry picked from commit 67560c26807eb6b52a733ba7ecc3d3119ba872cc)